# rustbik

./: .gitignore  Cargo.toml
assets/: v1plush.glb
src/: animation.rs  canvas.rs  lib.rs  log.rs  rubik.rs
src/canvas/: event_loop.rs  window.rs
src/rubik/: graphics.rs  piece.rs  rubik.frag
tests/: window.rs
