[package]
name = "rustbik"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
three-d = { version = "0.17.0", default-features = false }
three-d-asset = { version = "0.7.0", features = ["gltf", "image"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["WebGl2RenderingContext", "HtmlCanvasElement", "Window", "Performance", "Event", "CustomEvent", "ResizeObserverEntry", "ResizeObserverSize", "DomRectReadOnly", "console"] }

[profile.release]
opt-level = "s"

[features]
debug = ["dep:console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
